[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://assets/vector_space.png" type="Texture" id=2]
[ext_resource path="res://fonts/menu_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/perfect_dark_zero/Perfect Dark Zero.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/ui/bt_resume.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/bt_resume_hover.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/bt_retry.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/bt_retry_hover.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/bt_quit.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/bt_quit_hover.png" type="Texture" id=11]
[ext_resource path="res://sounds/test_synthwave_3.wav" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=1]
size = 255
outline_size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Environment" id=2]
background_mode = 4
fog_color = Color( 0, 0, 0, 1 )
fog_sun_color = Color( 1, 1, 1, 1 )
fog_sun_amount = 0.5
fog_height_max = 4000.0
auto_exposure_scale = 64.0
auto_exposure_min_luma = 0.0
auto_exposure_max_luma = 16.0
auto_exposure_speed = 64.0
ss_reflections_fade_in = 4.326
ss_reflections_fade_out = 50.2134
dof_blur_far_distance = 1205.1
dof_blur_far_transition = 1283.8
dof_blur_far_amount = 1.0
dof_blur_far_quality = 2
dof_blur_near_amount = 1.0
dof_blur_near_quality = 0
glow_enabled = true
glow_strength = 1.1
glow_bloom = 0.08

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="vector_space" type="Sprite" parent="."]
position = Vector2( 960, 534 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="score" type="Label" parent="."]
margin_left = 1374.05
margin_top = -28.4826
margin_right = 1761.05
margin_bottom = 257.517
custom_fonts/font = ExtResource( 3 )
text = "000"

[node name="start" type="Label" parent="."]
margin_left = 789.361
margin_top = 341.957
margin_right = 1160.36
margin_bottom = 627.957
custom_fonts/font = ExtResource( 3 )
text = "start"
align = 1

[node name="vaisseau" parent="." instance=ExtResource( 4 )]
position = Vector2( 960, 540 )

[node name="Pause" type="Popup" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0

[node name="pause" type="Label" parent="Pause"]
margin_left = 2.0
margin_top = 91.0
margin_right = 1919.0
margin_bottom = 377.0
custom_fonts/font = SubResource( 1 )
text = "Pause"
align = 1

[node name="btResume" type="TextureButton" parent="Pause"]
margin_left = 791.828
margin_top = 437.048
margin_right = 1112.83
margin_bottom = 502.048
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="btRetry" type="TextureButton" parent="Pause"]
margin_left = 791.828
margin_top = 557.048
margin_right = 1112.83
margin_bottom = 622.048
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="btQuit" type="TextureButton" parent="Pause"]
margin_left = 791.828
margin_top = 676.048
margin_right = 1112.83
margin_bottom = 741.048
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 11 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -25.0
autoplay = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="TimerStart" type="Timer" parent="."]
process_mode = 0
wait_time = 4.0
one_shot = true
autostart = true

[node name="TimerSpawn" type="Timer" parent="."]
process_mode = 0
[connection signal="pressed" from="Pause/btResume" to="." method="_on_btResume_pressed"]
[connection signal="pressed" from="Pause/btRetry" to="." method="_on_btRetry_pressed"]
[connection signal="pressed" from="Pause/btQuit" to="." method="_on_btQuit_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="timeout" from="TimerStart" to="." method="_on_TimerStart_timeout"]
[connection signal="timeout" from="TimerSpawn" to="." method="_on_TimerSpawn_timeout"]
